# hotel-reservations

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
tests/: stateless-journey.sh
tests/fixtures/: hotel-db.yml  input.txt
tests/snapshots/: failure-input-file-not-found  failure-missing-input-files  success-input-file-produces-correct-output
